--- a/terms.html
+++ b/terms.html
@@ -87,6 +87,7 @@
                 <ul class="primary-nav">
                     <li><a href="rules.html" title="Rules and How to Play">Rules</a></li>
                     <li><a href="about.html" title="About Stonefire">About</a></li>
+                    <li><a href="profile.html" title="Your Profile">Profile</a></li>
                     <li><a href="https://github.com/nmalinowski/Stonefire" title="Project repository" rel="noopener" target="_blank">Source</a></li>
                 </ul>
             </nav>
@@ -97,11 +98,36 @@
         <h1>Terms of Service</h1>
         <p>Effective Date: January 18, 2026</p>
 
-        <h2>1. Use</h2>
-        <p>By using Stonefire you agree to these terms. The game is provided "as-is".</p>
+        <h2>1. Acceptance of Terms</h2>
+        <p>By accessing or playing Stonefire, you agree to these Terms of Service. If you do not agree, please discontinue use.</p>
 
-        <h2>2. Intellectual Property</h2>
-        <p>All content is owned by Malinowski Consulting or its licensors.</p>
+        <h2>2. The Game</h2>
+        <p>Stonefire is a free, browser-based trading card game provided "as-is" without warranties of any kind. We reserve the right to modify, suspend, or discontinue any aspect of the game at any time.</p>
+
+        <h2>3. User Accounts</h2>
+        <p>You may play Stonefire without creating an account. All game data is stored locally in your browser by default.</p>
+        <p>If you choose to create an account (via GitHub, Google, or email sign-in), you are responsible for maintaining the security of your credentials. Account data including your display name, game statistics, and save data is stored using Supabase cloud services.</p>
+        <p>You may delete your account and associated data at any time through your profile settings.</p>
+
+        <h2>4. Data Storage</h2>
+        <p>Stonefire stores game preferences, progress, and save data in your browser's local storage. If you opt in to cloud sync by signing in, this data is also stored on our servers to enable cross-device play. See our <a href="privacy.html">Privacy Policy</a> for details.</p>
+
+        <h2>5. Intellectual Property</h2>
+        <p>All content, artwork, code, and game mechanics are owned by Malinowski Consulting, LLC or its licensors. The game source code is available on GitHub under its respective license.</p>
+
+        <h2>6. Prohibited Conduct</h2>
+        <p>You agree not to:</p>
+        <ul>
+            <li>Attempt to exploit, hack, or interfere with the game or its services</li>
+            <li>Use automated tools or bots to interact with the game</li>
+            <li>Misuse the authentication or cloud sync systems</li>
+        </ul>
+
+        <h2>7. Changes to Terms</h2>
+        <p>We may update these terms from time to time. Continued use of Stonefire after changes constitutes acceptance of the revised terms.</p>
+
+        <h2>8. Contact</h2>
+        <p>For questions about these terms, contact: webmaster@malinowskiconsulting.com</p>
 
         <a href="/" class="back-link">← Return to Stonefire</a>
     </main>
@@ -111,6 +137,7 @@
             <div class="footer-links">
                 <a href="/about.html">About</a>
                 <a href="/rules.html">Rules</a>
+                <a href="/profile.html">Profile</a>
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
                 <a href="https://github.com/nmalinowski/Stonefire" title="Project repository" rel="noopener"
