--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
         <ul class="primary-nav">
           <li><a href="rules.html" title="Rules and How to Play">Rules</a></li>
           <li><a href="about.html" title="About Stonefire" class="active">About</a></li>
+          <li><a href="profile.html" title="Your Profile">Profile</a></li>
           <li><a href="https://github.com/nmalinowski/Stonefire" title="Project repository" rel="noopener" target="_blank">Source</a></li>
         </ul>
       </nav>
@@ -40,7 +41,9 @@
   <footer id="site-footer">
     <div class="footer-inner">
       <div class="footer-links">
+        <a href="/about.html">About</a>
         <a href="/rules.html">Rules</a>
+        <a href="/profile.html">Profile</a>
         <a href="/privacy.html">Privacy</a>
         <a href="/terms.html">Terms</a>
         <a href="https://github.com/nmalinowski/Stonefire" title="Project repository" rel="noopener"
@@ -66,7 +69,7 @@
       </div>
     </div>
   </footer>
-  <script type="module" src="/js/main.js"></script>
+
 </body>
 
 </html>
