--- a/rules.html
+++ b/rules.html
@@ -22,6 +22,7 @@
         <ul class="primary-nav">
           <li><a href="rules.html" title="Rules and How to Play" class="active">Rules</a></li>
           <li><a href="about.html" title="About Stonefire">About</a></li>
+          <li><a href="profile.html" title="Your Profile">Profile</a></li>
           <li><a href="https://github.com/nmalinowski/Stonefire" title="Project repository" rel="noopener" target="_blank">Source</a></li>
         </ul>
       </nav>
@@ -263,6 +264,8 @@
         <div class="footer-inner">
             <div class="footer-links">
                 <a href="/about.html">About</a>
+                <a href="/rules.html">Rules</a>
+                <a href="/profile.html">Profile</a>
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
                 <a href="https://github.com/nmalinowski/Stonefire" title="Project repository" rel="noopener"
@@ -288,6 +291,6 @@
             </div>
         </div>
     </footer>
-  <script type="module" src="/js/main.js"></script>
+
 </body>
 </html>
