--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
     }
     </script>
 
-    <link rel="stylesheet" href="css/main.css?v=20260120">
-    <link rel="stylesheet" href="css/board.css?v=20260120">
-    <link rel="stylesheet" href="css/cards.css?v=20260120">
-    <link rel="stylesheet" href="css/animations.css?v=20260120">
-    <link rel="stylesheet" href="css/wizard.css?v=20260120">
+    <link rel="stylesheet" href="css/main.css?v=20260128y">
+    <link rel="stylesheet" href="css/board.css?v=20260128e">
+    <link rel="stylesheet" href="css/cards.css?v=20260128e">
+    <link rel="stylesheet" href="css/animations.css?v=20260128e">
+    <link rel="stylesheet" href="css/wizard.css?v=20260128g">
     <link rel="stylesheet" href="css/profile.css">
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#1a1a2e">
@@ -171,6 +171,8 @@
                     <li><a href="https://github.com/nmalinowski/Stonefire" title="Project repository" rel="noopener"
                             target="_blank">Source</a></li>
                 </ul>
+                <button id="factionBtn" class="faction-header-btn" aria-label="Change factions"
+                    title="Change factions">🎭</button>
                 <button id="fullscreenBtn" class="fullscreen-btn" aria-label="Toggle fullscreen mode"
                     title="Maximize game">⛶</button>
                 <button id="profileBtn" class="profile-header-btn" aria-label="Profile" title="Profile">👤<span class="sync-dot"></span></button>
@@ -556,6 +558,15 @@
         <noscript class="no-js-warning">This site requires JavaScript to run the game. Some functionality is unavailable
             without JavaScript.</noscript>
     </main>
+
+    <!-- About Section for Google OAuth Verification -->
+    <section id="about-section" class="about-section">
+        <div class="about-content">
+            <h2>About Stonefire</h2>
+            <p><strong>Stonefire</strong> is a free, browser-based trading card game with a prehistoric theme. Battle against AI opponents using strategic deck-building and tactical card play. Choose from multiple factions including Triassic, Jurassic, Cretaceous, Primordial, and Ice Age, each with unique playstyles and abilities.</p>
+            <p><strong>Sign in</strong> to save your progress, track your win/loss statistics, and sync your preferences across devices. We only request your basic profile information (name and email) to personalize your experience. See our <a href="/privacy.html">Privacy Policy</a> for details on how we handle your data.</p>
+        </div>
+    </section>
 
     <footer id="site-footer">
         <div class="footer-inner">
