--- a/rules.html
+++ b/rules.html
@@ -9,7 +9,7 @@
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#1a1a2e">
   <link rel="icon" href="/assets/icons/triassic.svg" type="image/svg+xml">
-  <link rel="stylesheet" href="/css/main.css?v=20260121">
+  <link rel="stylesheet" href="/css/main.css?v=20260128x">
 </head>
 <body class="static-page">
   <header id="site-header" role="banner">
