--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <!-- Turnstile Captcha -->
      <link rel="preconnect" href="https://challenges.cloudflare.com">
      <link rel="preload" href="/js/services/cloudflare.js" as="script" crossorigin="anonymous">
-     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?render=explicit" async defer></script>
+     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?render=explicit&onload=onloadTurnstileCallback" async defer></script>
 </head>
 
 <body>
